--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,8 @@
     --color-green: #2ecc71;
     --color-separate: #cccccc;
     --color-input-out: #ececec;
+
+    --box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 html, body {
@@ -61,7 +63,7 @@ b {
     border-radius: 20px;
     padding: 15px 20px;
     font-size: 20px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1) !important;
+    box-shadow: var(--box-shadow)!important;
     border: none !important;
 }
 
@@ -141,7 +143,7 @@ section.categoria {
     border-radius: 20px;
     padding: 15px 25px;
     font-size: 20px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow)!important;
 }
 
 .btn-yellow {
@@ -151,7 +153,7 @@ section.categoria {
     border-radius: 20px;
     padding: 15px 25px;
     font-size: 20px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow)!important;
 }
 
 .btn-sm {
@@ -220,7 +222,7 @@ section.categoria {
     border-radius: 50px;
     padding: 5px;
     font-size: 20px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow)!important;
     background-color: var(--color-secondary);
     border: 1px solid #ffe28c;
     display: flex;
@@ -240,7 +242,7 @@ section.categoria {
 .menu-bottom-item.active {
     color: var(--color-black)!important;
     font-weight: bold;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow)!important;
     background-color: var(--color-primary);
     border-radius: 50px;
 }
@@ -394,7 +396,7 @@ section.categoria {
     border-radius: 20px;
     padding: 15px 25px;
     font-size: 16px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1)!important;
+    box-shadow: var(--box-shadow)!important;
     border: none!important;
     height: 50px;
 }
@@ -458,7 +460,7 @@ textarea {
     background-position: center;
     background-color: var(--color-white);
     border-radius: 15px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1)!important;
+    box-shadow: var(--box-shadow)!important;
 }
 
 .normal-text {
@@ -482,7 +484,7 @@ textarea {
     border-radius: 20px;
     padding: 15px 25px;
     font-size: 18px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1)!important;
+    box-shadow: var(--box-shadow)!important;
     border: 1px solid #ffe28c;
     display: flex;
     justify-content: space-between;
