--- a/painel/css/painel.css
+++ b/painel/css/painel.css
@@ -65,8 +65,8 @@
 .menu-item {
     display: block;
     padding: 15px 30px;
-    color: var(--color-black)!important;
-    text-decoration: none!important;
+    color: var(--color-black) !important;
+    text-decoration: none !important;
 }
 
 .menu-item i {
@@ -148,16 +148,17 @@ h1.title-page {
 
 /* Tela Pedidos */
 
-.menus-pedidos i {
+.menus-pedido i {
     margin-right: 5px;
 }
 
-.menus-pedidos a {
+.menus-pedido a {
     margin-right: 10px;
     opacity: 0.5;
 }
 
-.menus-pedidos a.active, .menus-pedidos a:hover  {
+.menus-pedido a.active,
+.menus-pedido a:hover {
     opacity: 1;
 }
 
@@ -179,9 +180,10 @@ h1.title-page {
     float: right;
 }
 
+
 .info-pedido {
-    font: 15px;
-    margin-left: 10px;
+    font-size: 16px;
+    margin-bottom: 10px;
     color: var(--color-black);
 }
 
@@ -200,7 +202,7 @@ h1.title-page {
     height: 1px;
     background-color: var(--color-text-out);
     margin-bottom: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .horario-pedido {
@@ -214,3 +216,226 @@ h1.title-page {
     margin-top: 15px;
     color: var(--color-primary);
 }
+
+.card-pedido {
+    box-shadow: 1px 0px 15px 3px rgba(0, 0, 0, 0.1) !important;
+    border-radius: 0px;
+}
+
+.card-pedido::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 10px;
+    width: 100%;
+    top: -7px;
+    background: radial-gradient(circle, transparent, transparent 50%, #ffffff 50%, #ffffff 100%) -7px -8px / 16px 16px repeat-x;
+}
+
+.card-pedido::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 10px;
+    width: 100%;
+    bottom: -7px;
+    background: radial-gradient(circle, transparent, transparent 50%, #ffffff 50%, #ffffff 100%) -15px 2px / 16px 16px repeat-x;
+}
+
+.card-pedido:hover {
+    background-color: var(--color-secondary);
+}
+
+.card-pedido:hover::before, .card-pedido:hover::after {
+    background-image: radial-gradient(circle, transparent, transparent 50%, var(--color-secondary) 50%, var(--color-secondary) 100%);
+}
+
+.card-content {
+    cursor: pointer;
+}
+
+.card-pedido-body {
+    height: 140px;
+}
+
+/* Modal detalhes */
+
+.modal-content {
+    background: transparent;
+    border: none;
+}
+
+.modal-header {
+    border-bottom: 0;
+    background-color: var(--color-background);
+    border-radius: 0px;
+}
+
+.modal-header::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 10px;
+    width: 100%;
+    top: -8px;
+    background: radial-gradient(circle, transparent, transparent 50%, var(--color-background) 50%, var(--color-background) 100%) -7px -8px / 16px 16px repeat-x;
+}
+
+.modal-title {
+    font-size: 18px;
+    color: var(--color-black);
+}
+
+.modal-title .horario-pedido {
+    font-size: 14px;
+    color: var(--color-text);
+    padding-left: 15px;
+}
+
+.modal-body {
+    padding: 0;
+}
+
+.container-dados-pedido {
+    padding: 20px;
+    padding-bottom: 25px;
+    background-color: var(--color-background);
+}
+
+.container-dados-pedido .d-flex {
+    justify-content: space-between;
+}
+
+.cursor-default {
+    cursor: default;
+}
+
+.container-dados-pedido .info-pedido {
+    font-size: 14px;
+    color: var(--color-text);
+}
+
+.container-itens-pedido {
+    padding: 20px;
+    background-color: var(--color-white);
+}
+
+.container-itens-pedido .card-item {
+    padding: 5px 0px 10px 0px;
+    border-bottom: 1px dashed #cdcdcd;
+}
+
+.container-itens-pedido .card-item:last-child {
+    border: none;
+}
+
+.container-itens-pedido::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 10px;
+    width: 100%;
+    margin-top: 17px;
+    background: radial-gradient(circle, transparent, transparent 50%, #ffffff 50%, #ffffff 100%) -15px 2px / 16px 16px repeat-x;
+}
+
+.footer-btn {
+    display: flex;
+    justify-content: end;
+}
+
+/* Cardápio */
+
+.card-drag {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.drag-icon {
+    display: flex;
+    width: 25px;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    height: 35px;
+    cursor: grab;
+}
+
+.card-drag .infos {
+    flex: 1;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 16px;
+}
+
+.card-drag .infos .name {
+    color: var(--color-black)!important;
+    text-decoration: none!important;
+}
+
+.actions {
+    display: flex;
+}
+
+.icon-action {
+    margin-left: 10px;
+    font-size: 16px;
+    color: var(--color-black)!important;
+    text-decoration: none!important;
+    width: 35px;
+    height: 35px;
+    background-color: var(--color-white);
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.3s;
+    box-shadow: var(--box-shadow);
+}
+
+.icon-action:hover {
+    background-color: var(--color-secondary);
+}
+
+.title-produtos {
+    font-size: 14px;
+    color: var(--color-black);
+}
+
+.drag-icon-produto {
+    display: flex;
+    width: 35px;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    cursor: grab;
+}
+
+.lista-produtos .container-img-produto {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+}
+
+.lista-produtos .infos-produto {
+    flex: 1;
+}
+
+.badge-adicionais {
+    position: absolute;
+    top: 6px;
+    margin-left: 19px;
+    font-size: 12px;
+    background-color: var(--color-primary);
+    color: var(--color-black);
+    width: 20px;
+    height: 20px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
